:sparkles: New section: pLHE MC production with CRAB!
:construction: pLHE production in test.
:construction: 2023 & 2024 configuration to be completed.
:construction: PREMIX list generation method to be updated.
:see_no_evil: Updated .gitignore to avoid adding .DS_Store and png files exported from markdown files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-workbook.png
+workbook*.png
 preCut/*.png
 secCut/*.png
 preCut/jobs_*/*
@@ -7,3 +7,4 @@ secCut/jobs_*/*
 *.root
 *.pdf
 TPS-Onia2MuMu/*
+*.DS_Store
